fix(nav-item): enforce margin-right on navigation items for consistent spacing

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -106,7 +106,7 @@ html[data-theme="dark"] {
   border-top: none !important;
 
   // Utilise la variable de fond du thème pour l'opacité
-  background-color: var(--minima-background-color) !important; 
+  background-color: var(--minima-background-color) !important;
   border-bottom: 1px solid var(--minima-border-color-01);
 
   // Élargit uniquement le conteneur de la navbar
@@ -133,9 +133,11 @@ html[data-theme="dark"] {
   margin-bottom: 0px;
 }
 
-.nav-item {
-  &:not(:last-child) {
-    margin-right: 5px;
+.site-nav {
+  .nav-item {
+    &:not(:last-child) {
+      margin-right: 5px !important;
+    }
   }
 }
 
